	* Require TYPO3 6.2
	* Convert pi1/locallang.xml to xlf and copy to Resources/Private/Language folder
	* Convert locallang_db.xml to xlf and move to Resources/Private/Language folder
	* Convert locallang.xml to xlf and merge to Resources/Private/Language folder
	* Convert mod1/locallang.xml and mod1/locallang_mod.xml to xlf and merge into Resources/Private/Language folder

2014-03-22  Stanislas Rolland  <typo3@sjbr.ca

	* Fix charset setting for emails set in deferred mode
	* Update version to 3.1.0

2014-03-20  Stanislas Rolland  <typo3@sjbr.ca

	* Resolves #57101: Fatal Error on Execution of Scheduler Task

2014-03-14  Stanislas Rolland  <typo3@sjbr.ca

	* Remove reference to deprecated method
	* Fix informal salutation in TYPO3 4.6+

2014-02-21  Stanislas Rolland  <typo3@sjbr.ca

	* Resolves #56202: Some links are wrong when absRefPrefix is configured
	* Resolves #42339: Text-Mails are wrong
	* Add warning in TS constants and manual regarding domain of site email address
	* Enable in TYPO3 6.2

2012-06-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #37866: Incorrect localization of informal labels
	* Version 3.0.1

2012-05-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Update manual
	* Version 3.0.0

2012-05-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Add class tx_srsendcard_email
	* Add scheduler task for sending deferred cards
	* Convert statistics module to typo3/mod.php

2012-05-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Always use utf-8 by default
	* Fix for tslib_pibase TYPO3 4.6+ and PHP 5.3+
	* Code cleanup
	* Use Swift mail API

2012-04-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Add extension autoload

2011-12-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #32247: Fatal error for redeclare class
	* Added feature #32638: Remove deprecated card language overlay table
	* Added feature #32639: Remove deprecated old-style template
	* Added feature #32640: Require TYPO3 4.5 and PHP 5.3
	* Added feature #32640: Module compatibility with TYPO 4.6