@@ -4,6 +4,6 @@ $MCONF['name'] = 'web_txsrsendcardM1';
 $MCONF['access'] = 'user,group';
 $MCONF['script'] = '_DISPATCH';
 
-$MLANG['default']['tabs_images']['tab'] = 'moduleicon.gif';
+$MLANG['default']['tabs_images']['tab'] = '../Resources/Public/Images/moduleicon.gif';
 $MLANG['default']['ll_ref'] = 'LLL:EXT:sr_sendcard/Resources/Private/Language/locallang_mod.xlf';
 ?>
